--- a/pom.xml
+++ b/pom.xml
@@ -867,4 +867,41 @@
             </plugins>
         </pluginManagement>
     </build>
+
+    <repositories>
+        <!-- Allow the consumption of artifacts from our internal snapshot and release repositories -->
+        <repository>
+            <id>starburstdata.snapshots</id>
+            <url>https://maven.starburstdata.net/starburstdata-artifacts/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>starburstdata.releases</id>
+            <url>https://maven.starburstdata.net/starburstdata-artifacts/releases</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>starburstdata.snapshots</id>
+            <name>Starburst Snapshot repository</name>
+            <url>https://maven.starburstdata.net/starburstdata-artifacts/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>starburstdata.releases</id>
+            <name>Starburst Snapshot repository</name>
+            <url>https://maven.starburstdata.net/starburstdata-artifacts/releases</url>
+        </repository>
+    </distributionManagement>
 </project>
