--- a/pom.xml
+++ b/pom.xml
@@ -757,6 +757,8 @@
                                         <exclude>org/apache/hadoop/hive/ql/io/parquet/timestamp/NanoTimeUtils.class</exclude>
                                         <exclude>org/apache/hadoop/hive/ql/io/parquet/timestamp/NanoTimeUtils$*.class</exclude>
                                         <exclude>org/apache/tez/**</exclude>
+                                        <exclude>org/apache/hadoop/hive/ql/io/AcidUtils.class</exclude>
+                                        <exclude>org/apache/hadoop/hive/ql/io/AcidUtils$*.class</exclude>
                                     </excludes>
                                 </filter>
                                 <filter>
