--- a/pom.xml
+++ b/pom.xml
@@ -553,6 +553,14 @@
             <version>${dep.hadoop.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- test dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
